@@ -33,10 +33,8 @@ $opt_force = ($opt_force ? 1 : 0);
 $file=shift;
 
 fatal("cannot read input file '$file'") unless (-r $file);
-fatal("DB_CONNECT not defined in configuration!") unless ($DB_CONNECT);
 
-db_connect($DB_CONNECT);
-#db_debug(1);
+db_connect();
 
 
 open(FILE,"$file") || fatal("cannot open input file '$file'");
